--- a/Visualization/焦虑&影响之心.md
+++ b/Visualization/焦虑&影响之心.md
@@ -4,6 +4,8 @@
 
 ## step1 导入数据并排序
 ```python
+import pandas as pd
+import math
 df = pd.read_csv('xxx.csv', index_col=0) #数据任取
 df = df[['焦虑指数', '干扰指数']]
 df.rename(columns={'焦虑指数': 'anx', '干扰指数': 'inf'}, inplace=True) # 为了方便改个名字
