--- a/Visualization/焦虑&影响之心.md
+++ b/Visualization/焦虑&影响之心.md
@@ -34,6 +34,7 @@ di['y'] = di.apply(lambda x: -x['inf']*math.sin(x['rad']), axis=1)
 ```
 ## step4 画出图形
 ```python
+import matplotlib.pyplot as plt
 fig = plt.figure(figsize=(7,6))
 plt.plot(
     da['y'], da['x'], 'o-',
